# odroidStateEstimation

./: .gitignore  .gitmodules  CMakeLists.txt  KeyFrames.mpeg  KeyFramesCombi.mpeg  KeyFramesVar.mpeg  README.md  flyTest  flytest  imuData.txt  livePlot.gnu  logData.txt  makeAll.sh  plot.gnu  slamPath.txt  test
calib/: calib-atan.txt  calib.txt
src/: MsfOutput3DWrapper.cpp  MsfOutput3DWrapper.h
src/test/: main_test.cpp  record_test.cpp
